<resources>
    <string name="app_name">ImgVwr</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="description">Main Image</string>
    <string name="numberOfImage">Some text</string>
    <string name="previous"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>
    <string name="action_add">Add new</string>
    <string name="action_delete_this">Delete</string>
    <string name="action_delete_all">Clear Database</string>
    <string name="title_activity_grid_view">GridViewActivity</string>
    <string name="action_gridview">Grid View</string>
</resources>
