<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_add" android:title="@string/action_add"
        android:orderInCategory="1" app:showAsAction="never" />


    <item android:id="@+id/action_delete_this" android:title="@string/action_delete_this"
        android:orderInCategory="2" app:showAsAction="never" />


    <item android:id="@+id/action_delete_all" android:title="@string/action_delete_all"
        android:orderInCategory="3" app:showAsAction="never" />

    <item android:id="@+id/action_gridView" android:title="@string/action_gridview"
        android:orderInCategory="4" app:showAsAction="never" />


</menu>
